--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,19 +1,19 @@
 :root {
   --blue: #0073C3;
   --blue-dade: #0073C325;
-  --purple: #794DAF;
-  --dark: #2a343cff;
+  /* --purple: #794DAF; */
+  --primary: #2a343cff;
   --bg: #14171f;
   --card: #333f49;
   --shadow: #0d1114;
   --border: #525B62;
-  /* --hiij: #5f7e58; */
+  --letters: #ffffff;
 }
 
 body {
-  background-color: var(--dark);
+  background-color: var(--primary);
   font-family:  "Source Sans Pro", sans-serif;
-  color:white;
+  color:var(--letters);
   padding:0px;
   margin:0px;
   font-weight: 400;
@@ -25,7 +25,7 @@ input {
 
 .container {
   margin:auto;
-  background-color: var(--dark);
+  background-color: var(--primary);
   /* background-color: red; */
   max-width: 330px;
   margin-top:80px;
@@ -59,7 +59,7 @@ input {
   border-radius:5px;
   border: 1px solid white;
   background-color: white;
-  color: var(--dark);
+  color: var(--primary);
 }
 
 .login-card button:hover {
@@ -144,7 +144,7 @@ input {
 #circle p {
   font-size: 40px;
   font-weight: 900;
-  background-color: var(--dark);
+  background-color: var(--primary);
   border-radius: 50%;
   width:185px;
   height: 185px;
@@ -165,7 +165,7 @@ input {
 
 
 #total-macros {
-  background-color: var(--dark);
+  background-color: var(--primary);
   padding:0px 20px;
   display:flex;
   justify-content: space-around;
@@ -173,7 +173,7 @@ input {
 }
 
 .macros-card {
-  background-color: var(--dark);
+  background-color: var(--primary);
   
 }
 
@@ -213,7 +213,7 @@ section {
   padding:30px;
   margin:400px auto 0px;
   z-index: 1;
-  background-color: var(--dark);
+  background-color: var(--primary);
   border:1px solid #525B62;
   border-radius:30px 30px 0px 0px;
   border-bottom: none;
@@ -277,7 +277,7 @@ section {
   border-radius: 10px;
   position:relative;
   left:10px;
-  color:white;
+  color:var(--letters);
   display: block;
 }
 
@@ -291,7 +291,7 @@ section {
   height: 25px;
   border: 1px solid grey;
   border-radius: 10px;
-  color: white;
+  color: var(--letters);
   text-align: center;
   position:relative;
   left:10px;
@@ -305,7 +305,7 @@ section {
 
 .up .fg:hover {
   cursor: pointer;
-  border-color: white;
+  border-color: var(--letters);
 }
 
 .up .del button {
@@ -322,7 +322,7 @@ section {
 
 .up .del button:hover {
   cursor: pointer;
-  color:white;
+  color:var(--letters);
 }
 
 .up form {
@@ -332,8 +332,8 @@ section {
 }
 
 .up form button {
-  background-color: var(--dark);
-  color: white;
+  background-color: var(--primary);
+  color: var(--letters);
   border:1px solid grey;
   border-radius:5px;
   padding:5px 10px;
@@ -341,7 +341,7 @@ section {
 }
 .up form button:hover {
   cursor: pointer;
-  border-color: white;
+  border-color: var(--letters);
 }
 
 .finfo .down {
@@ -489,7 +489,7 @@ nav {
 }
 
 #bgtr {
-  background-color: var(--dark);
+  background-color: var(--primary);
   width:90px;
   height: 50px;
   border-radius: 0px 0px 50px 50px;
@@ -646,7 +646,7 @@ nav {
 }
 
 .inactive {
-  background-color: var(--dark);
+  background-color: var(--primary);
   border:1px solid grey;
   color:grey;
 }
@@ -804,43 +804,51 @@ margin-left:25px;
   box-sizing: border-box;
 }
 
-#history-page h1 {
+#history-page header {
   position: fixed;
   top:0px;
   width:100%;
+  max-width: 1000px;
 }
 
 #days {
-  display: flex;
+  display: grid;
   width:90%;
-  justify-content: space-between;
+  max-width: 800px;
+  grid-template-columns: repeat(7, 1fr);
+  gap:20px;
   font-size: 20px;
   font-weight: 900;
   position:fixed;
   top:120px;
-  background-color: var(--dark);
+  background-color: var(--primary);
+  /* background-color: green; */
   left: 50%;
   transform: translate(-50%, 0%);
   padding-left:10px;
   padding-right:10px;
+  overflow-x: hidden;
 }
 
 #days p {
   width:40px;
+  /* background-color: yellow; */
 }
 
 #history-page #container {
   width:90%;
+  max-width: 800px;
   margin:180px auto 120px;
-  /* background-color: green; */
+  /* background-color: palevioletred; */
   height: calc(100vh - 330px);
   min-height:200px;
   overflow: scroll;
-  display: flex;
-  flex-wrap: wrap;
-  gap: calc(100vw/7 - 46px);
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  align-content: start;
+  gap: 10px 15px;
   padding:10px;
-  justify-content: flex-start;
+  overflow-x: hidden;
 }
 
 #history-page #container div {
@@ -871,6 +879,7 @@ margin-left:25px;
 
 .empty {
   background-color: transparent;
+  /* background-color: black; */
   border:1px solid transparent;
   color: transparent;
 }
@@ -889,6 +898,7 @@ margin-left:25px;
   border: 1px solid #00ff0015;
   color: white;
 }
+
 
 
 
@@ -1022,7 +1032,7 @@ margin-left:25px;
   align-items: center;
 }
 
-#input-card #title {
+#input-card #title, #smart-input-card #title{
   position:relative;
 }
 
@@ -1033,7 +1043,7 @@ margin-left:25px;
   right:-70px;
 }
 
-#input-card #title img:hover {
+#input-card #title img:hover, #smart-input-card img:hover {
   cursor:pointer;
   opacity: 0.8;
 }
@@ -1056,7 +1066,7 @@ margin-left:25px;
   font-size: 30px;
 }
 
-#input-card button {
+#input-card button, #smart-input-card button{
   width:80%;
   background-color: var(--blue);
   border:none;
@@ -1066,7 +1076,7 @@ margin-left:25px;
   font-size:20px;
   opacity: 0.8;
 }
-#input-card button:hover {
+#input-card button:hover, #smart-input-card button:hover {
   cursor:pointer;
   border:1px solid var(--border);
   opacity:1;
@@ -1137,6 +1147,55 @@ margin-left:25px;
   cursor:pointer;
   opacity: 1;
 }
+
+
+
+#smart-input-card {
+  display: none;
+  position:fixed; 
+  top:0px;
+  width:100vw;
+  height:100vh;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(2px);
+  z-index: 3;
+}
+
+#smart-input-card > div {
+  display: flex;
+  width:300px;
+  /* height:200px; */
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+}
+
+#smart-input-card img {
+  width:20px;
+  position: absolute;
+  top:5px;
+  right: 5px;
+}
+
+#smart-input-card #select-cont {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  gap:10px;
+  width: 100%;
+  /* background-color: red; */
+  align-items: center;
+}
+
+/* #smart-input-card button {
+  background-color: var(--blue);
+  border-none
+} */
+
 
 
 
