--- a/views/create-food.ejs
+++ b/views/create-food.ejs
@@ -73,6 +73,34 @@
 </div>
 
 <script>
+
+        const user = {
+            weight: parseFloat(`<%= info.weight %>`),
+            height: parseFloat(`<%= info.height %>`),
+            theme: `<%= info.them %>`,
+            activity: `<%= info.act %>`,
+            gender: `<%= info.gend %>`,
+            goal: `<%= info.goa %>`,
+            birth: parseInt(`<%= info.birth_year %>`),
+        }
+
+        const pallete = {
+            // NAME: ['PRIMARY', 'SECONDARY', 'CARD', 'LETTERS', 'NAV'],
+            DARK: ['#2a343cff', '#0073C3', '#333f49', '#ffffff', '#14171f'],
+            LIGHT: ['#cccccc', '#0073c3', '#bababa', '#000000', '#333333'],
+            BLACK: ['#000000', '#0073c3', '#0f0f0f', '#ffffff', '#171717'],
+            BLUE: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+            RED: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+            GOLD: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+            SILVER: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+        }
+
+        const root = document.documentElement;
+        root.style.setProperty('--primary', pallete[user.theme][0]);
+        root.style.setProperty('--blue', pallete[user.theme][1]); // make secondary
+        root.style.setProperty('--card', pallete[user.theme][2]);
+        root.style.setProperty('--letters', pallete[user.theme][3]);
+        root.style.setProperty('--bg', pallete[user.theme][4]);
     
     const form = document.querySelector('form');
     const button = document.querySelector('button');
