--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -103,11 +103,30 @@
     const user = {
       weight: parseFloat(`<%= info.weight %>`),
       height: parseFloat(`<%= info.height %>`),
+      theme: `<%= info.them %>`,
       activity: `<%= info.act %>`,
       gender: `<%= info.gend %>`,
       goal: `<%= info.goa %>`,
       birth: parseInt(`<%= info.birth_year %>`),
     }
+
+    const colors = {
+      // NAME: ['PRIMARY', 'SECONDARY', 'CARD', 'LETTERS', 'NAV'],
+      DARK: ['#2a343cff', '#0073C3', '#333f49', '#ffffff', '#14171f'],
+      LIGHT: ['#cccccc', '#0073c3', '#bababa', '#000000', '#333333'],
+      BLACK: ['#000000', '#0073c3', '#0f0f0f', '#ffffff', '#171717'],
+      BLUE: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+      RED: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+      GOLD: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+      SILVER: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+    }
+
+    const root = document.documentElement;
+    root.style.setProperty('--primary', colors[user.theme][0]);
+    root.style.setProperty('--blue', colors[user.theme][1]); // make secondary
+    root.style.setProperty('--card', colors[user.theme][2]);
+    root.style.setProperty('--letters', colors[user.theme][3]);
+    root.style.setProperty('--bg', colors[user.theme][4]);
 
     const foodData = <%- JSON.stringify(foods) %>;
 
@@ -126,7 +145,6 @@
     var sumFat = 0;
     var sumCarb = 0;
     foodData.forEach(obj => {
-      console.log(obj.cal*obj.gr/100);
       sumCal += Math.round(obj.cal*obj.gr/100);
       sumProt += Math.round(obj.prot*obj.gr/100);
       sumFat += Math.round(obj.fat*obj.gr/100);
@@ -144,7 +162,7 @@
       carbs: ((sumCarb*100)/goal.carbs)
     }
 
-    const conicGradient = `conic-gradient( #0073C3 ${caloriesP}%, #0073C30a ${caloriesP}%)`;
+    const conicGradient = `conic-gradient( var(--blue) ${caloriesP}%, var(--blue) ${caloriesP}%)`;
 
     progressCircle.style.background = conicGradient;
     calories.innerHTML = `${sumCal} cal <br /> <span>/${caloriesG}</span>`;
