--- a/views/create-food.ejs
+++ b/views/create-food.ejs
@@ -8,62 +8,62 @@
 
         <div id="name">
             <h2>Name</h2>
-            <input type="text" placeholder="E.g. chicken" name="name" />
+            <input type="text" placeholder="E.g. chicken" name="name" autocomplete="off" />
         </div>
 
         <div id="calories">
             <h2>Calories </h2>
-            <input type="text" placeholder="0"  onkeyup="validateNumber(this)" name="cal"/>
+            <input type="text" placeholder="0"  onkeyup="validateNumber(this)" name="cal" autocomplete="off"/>
         </div>
         
         <div id="fat">
             <h3>Total Fat</h3>
-            <input type="text" placeholder="0"  onkeyup="validateNumber(this)" name="fat" />
+            <input type="text" placeholder="0"  onkeyup="validateNumber(this)" name="fat" autocomplete="off" />
         </div>
 
         <div class="near">
     
             <div id="saturated">
                 <h4>Saturated Fat</h4>
-                <input type="text" placeholder="0" onkeyup="validateNumber(this)" />
+                <input type="text" placeholder="0" onkeyup="validateNumber(this)" autocomplete="off" />
             </div>
     
             <div id="trans">
                 <h4>Trans Fat</h4>
-                <input type="text" placeholder="0" onkeyup="validateNumber(this)" />
+                <input type="text" placeholder="0" onkeyup="validateNumber(this)" autocomplete="off" />
             </div>
     
             <div id="cholesterol">
                 <h4>Cholesterol</h4>
-                <input type="text" placeholder="0" onkeyup="validateNumber(this)" />
+                <input type="text" placeholder="0" onkeyup="validateNumber(this)" autocomplete="off" />
             </div>
     
             <div id="sodium">
                 <h4>Sodium</h4>
-                <input type="text" placeholder="0" onkeyup="validateNumber(this)" />
+                <input type="text" placeholder="0" onkeyup="validateNumber(this)" autocomplete="off" />
             </div>
         </div>
 
         <div id="carbohydrates">
             <h3>Total Carbohydrates</h3>
-            <input type="text" placeholder="0" onkeyup="validateNumber(this)" name="carb" />
+            <input type="text" placeholder="0" onkeyup="validateNumber(this)" name="carb" autocomplete="off" />
         </div>
 
         <div class="near">
             <div id="fibers">
                 <h4>Dietary Fibers</h4>
-                <input type="text" placeholder="0" onkeyup="validateNumber(this)" />
+                <input type="text" placeholder="0" onkeyup="validateNumber(this)" autocomplete="off" />
             </div>
     
             <div id="sugar">
                 <h4>Total Sugar</h4>
-                <input type="text" placeholder="0" onkeyup="validateNumber(this)" />
+                <input type="text" placeholder="0" onkeyup="validateNumber(this)" autocomplete="off" />
             </div>
         </div>
 
         <div id="protein">
             <h3>Protein</h3>
-            <input type="text" placeholder="0" onkeyup="validateNumber(this)" name="prot" />
+            <input type="text" placeholder="0" onkeyup="validateNumber(this)" name="prot" autocomplete="off" />
         </div>
         
         <button >Done</button>
@@ -85,22 +85,23 @@
         }
 
         const pallete = {
-            // NAME: ['PRIMARY', 'SECONDARY', 'CARD', 'LETTERS', 'NAV'],
-            DARK: ['#2a343cff', '#0073C3', '#333f49', '#ffffff', '#14171f'],
-            LIGHT: ['#cccccc', '#0073c3', '#bababa', '#000000', '#333333'],
-            BLACK: ['#000000', '#0073c3', '#0f0f0f', '#ffffff', '#171717'],
-            BLUE: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
-            RED: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
-            GOLD: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
-            SILVER: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
-        }
+      // NAME: ['PRIMARY', 'SECONDARY', 'CARD', 'LETTERS', 'NAV', 'SHADOW'],
+      DARK: ['#2a343cff', '#0073C3', '#333f49', '#ffffff', '#14171f', '#0d1114'],
+      LIGHT: ['#f2f2f2', '#0073c3', '#d9d9d9', '#000000', '#333333', '#bbbbbb'],
+      BLACK: ['#000000', '#0073c3', '#0f0f0f', '#ffffff', '#171717', '#0d1114'],
+      BLUE: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
+      RED: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
+      GOLD: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
+      SILVER: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
+    }
 
-        const root = document.documentElement;
-        root.style.setProperty('--primary', pallete[user.theme][0]);
-        root.style.setProperty('--blue', pallete[user.theme][1]); // make secondary
-        root.style.setProperty('--card', pallete[user.theme][2]);
-        root.style.setProperty('--letters', pallete[user.theme][3]);
-        root.style.setProperty('--bg', pallete[user.theme][4]);
+    const root = document.documentElement;
+    root.style.setProperty('--primary', pallete[user.theme][0]);
+    root.style.setProperty('--blue', pallete[user.theme][1]); // make secondary
+    root.style.setProperty('--card', pallete[user.theme][2]);
+    root.style.setProperty('--letters', pallete[user.theme][3]);
+    root.style.setProperty('--bg', pallete[user.theme][4]);
+    root.style.setProperty('--shadow', pallete[user.theme][5]);
     
     const form = document.querySelector('form');
     const button = document.querySelector('button');
