--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -110,23 +110,24 @@
       birth: parseInt(`<%= info.birth_year %>`),
     }
 
-    const colors = {
-      // NAME: ['PRIMARY', 'SECONDARY', 'CARD', 'LETTERS', 'NAV'],
-      DARK: ['#2a343cff', '#0073C3', '#333f49', '#ffffff', '#14171f'],
-      LIGHT: ['#cccccc', '#0073c3', '#bababa', '#000000', '#333333'],
-      BLACK: ['#000000', '#0073c3', '#0f0f0f', '#ffffff', '#171717'],
-      BLUE: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
-      RED: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
-      GOLD: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
-      SILVER: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333'],
+    const pallete = {
+      // NAME: ['PRIMARY', 'SECONDARY', 'CARD', 'LETTERS', 'NAV', 'SHADOW'],
+      DARK: ['#2a343cff', '#0073C3', '#333f49', '#ffffff', '#14171f', '#0d1114'],
+      LIGHT: ['#f2f2f2', '#0073c3', '#d9d9d9', '#000000', '#333333', '#bbbbbb'],
+      BLACK: ['#000000', '#0073c3', '#0f0f0f', '#ffffff', '#171717', '#0d1114'],
+      BLUE: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
+      RED: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
+      GOLD: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
+      SILVER: ['#bbbbbb', '#0073c3', '#999999', '#000000', '#333333', '#0d1114'],
     }
 
     const root = document.documentElement;
-    root.style.setProperty('--primary', colors[user.theme][0]);
-    root.style.setProperty('--blue', colors[user.theme][1]); // make secondary
-    root.style.setProperty('--card', colors[user.theme][2]);
-    root.style.setProperty('--letters', colors[user.theme][3]);
-    root.style.setProperty('--bg', colors[user.theme][4]);
+    root.style.setProperty('--primary', pallete[user.theme][0]);
+    root.style.setProperty('--blue', pallete[user.theme][1]); // make secondary
+    root.style.setProperty('--card', pallete[user.theme][2]);
+    root.style.setProperty('--letters', pallete[user.theme][3]);
+    root.style.setProperty('--bg', pallete[user.theme][4]);
+    root.style.setProperty('--shadow', pallete[user.theme][5]);
 
     const foodData = <%- JSON.stringify(foods) %>;
 
@@ -162,7 +163,7 @@
       carbs: ((sumCarb*100)/goal.carbs)
     }
 
-    const conicGradient = `conic-gradient( var(--blue) ${caloriesP}%, var(--blue) ${caloriesP}%)`;
+    const conicGradient = `conic-gradient( var(--blue) ${caloriesP}%, var(--primary-fade) ${caloriesP}%)`;
 
     progressCircle.style.background = conicGradient;
     calories.innerHTML = `${sumCal} cal <br /> <span>/${caloriesG}</span>`;
@@ -265,17 +266,17 @@
     function calcUserMacros(user) {
       
       const goal = {
-        protein: Math.round(caloriesG * 0.25 / 4),
+        protein: Math.round(user.weight * 2),
         fats: Math.round(caloriesG * 0.25 / 9),
         carbs: Math.round(caloriesG * 0.25 / 4),
       }
 
       if (user.goal=="LOSE FAT") {
-          goal.protein = Math.round(caloriesG * 0.35 / 4);
+          goal.protein = Math.round(user.weight * 2.5);
           goal.fats = Math.round(caloriesG * 0.25 / 9);
           goal.carbs = Math.round(caloriesG * 0.4 / 4);
         } else if (user.goal=="GAIN MUSCLE") {
-          goal.protein = Math.round(caloriesG * 0.25 / 4);
+          goal.protein = Math.round(user.weight * 2);
           goal.fats = Math.round(caloriesG * 0.25 / 9);
           goal.carbs = Math.round(caloriesG * 0.5 / 4);
 
@@ -284,9 +285,12 @@
       return goal
     }
 
-    console.table(user);
+    // console.table(user);
 
-    console.log(new Date().toISOString().slice(0,10));
+    // console.log(new Date().toISOString().slice(0,10));
+
+    console.log(caloriesP);
+    console.table(conicGradient);
 
 
   </script>
