--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,12 +10,15 @@
   --letters: #ffffff;
 }
 
+* {
+  margin: 0;
+  padding:0;
+}
+
 body {
   background-color: var(--primary);
   font-family:  "Source Sans Pro", sans-serif;
   color:var(--letters);
-  padding:0px;
-  margin:0px;
   font-weight: 400;
 }
 
@@ -27,13 +30,17 @@ input {
   margin:auto;
   background-color: var(--primary);
   /* background-color: red; */
-  max-width: 330px;
-  margin-top:80px;
+  width:70%;
+  height:40vh;
+  margin-top: calc(20vh);
   padding: 20px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .login-card input {
-  max-width:300px;
+  /* max-width:300px; */
   width:300px;
   display: block;
   height:30px;
@@ -121,6 +128,7 @@ input {
 
 .header {
   background-color: var(--card);
+  /* background-color: red; */
   border-bottom: 1px solid var(--border);
   box-shadow: 0px 0px 10px var(--shadow);
   margin:0px;
@@ -225,9 +233,11 @@ section {
 
 .logs {
   padding:10px;
+  margin: auto;
   margin-bottom: 20px;
   height:78px;
   position:relative;
+  max-width:400px;
 }
 
 .logs:last-child {
@@ -677,7 +687,7 @@ nav {
   height:20px;
   border-radius: 5px;
   position: relative;
-  left:14px;
+  left:18px;
   bottom:2px;
 }
 
@@ -688,7 +698,7 @@ nav {
   border-radius: 5px;
   position: relative;
   top:9px;
-  left:5px;
+  left:9px;
 }
 
 
@@ -926,12 +936,14 @@ margin-left:25px;
   border:1px solid grey;
   border-radius: 20px;
   width:80%;
+  max-width: 356px;
   height:200px;
   margin:auto;
   margin-top:40px;
   background-color: var(--card);
   overflow:hidden;
   box-shadow: 0px 0px 20px var(--shadow);
+  position: relative;
 }
 
 #stats .stats-card h2 {
